@@ -1,3 +1,7 @@
+Drupal 8.0.4, 2016-02-24
+------------------------
+- Fixed security issues (multiple vulnerabilities). See SA-CORE-2016-001.
+
 Drupal 8.0.0, 2015-11-19
 ------------------------
 - Significantly improved the front end:
